Completed Swagger documentation
